Fix latest issue button alignment on mobile Safari

--- a/packages/bulletin/assets/css/screen.css
+++ b/packages/bulletin/assets/css/screen.css
@@ -519,6 +519,13 @@
     }
 }
 
+@supports (-webkit-touch-callout: none) {
+    .gh-home-latest-footer .gh-btn {
+        padding-top: 1.3rem;
+        padding-bottom: 1.5rem;
+    }
+}
+
 @keyframes pulse {
     0% {
         box-shadow: 0 0 0 0 rgba(var(--ghost-accent-color-rgb), 0.7);
